
	* twittering-mode.el (toplevel): On Emacs21, always call
	`set-terminal-coding-system'.

2010-01-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-format-status): Call
	`twittering-make-display-spec-for-icon' only when `window-system'
	is non-nil to avoid error "Non-X frame used" under Emacs which is
	using a text-only terminal.

2010-01-23  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-json-to-status-datum): Don't
	refer to `twittering-use-native-retweet'; same as
	`twittering-status-to-status-datum'.

2010-01-23  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-home-timeline): Add new funciton.

2010-01-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-fill-string): adjust
	`fill-column' to the minimum width of windows displaying
	`*twittering*' buffer. Thanks to Naohiro Aota.

	* twittering-mode.el (twittering-render-timeline): take account of
	multiple windows displaying `*twittering*' buffer.
	Thanks to Naohiro Aota.

	* twittering-mode.el (twittering-format-status): fix an incorrect
	index on filling text for the specifier "%t".

2010-01-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-timeline-spec-to-host-method):
	return query string as a element of returned list.
	(twittering-host-method-to-timeline-spec): receive query string as
	a optional argument.
	(twittering-http-get): remove special adjustment for search
	method, which is now unnecessary.
	(twittering-get-tweets): always receive query string as an
	argument for search method.
	(twittering-get-search): removed.
	(twittering-get-and-render-timeline): send query string if the
	given spec is `search'.
	(twittering-search): execute search via
	`twittering-get-and-render-timeline'.

	* twittering-mode.el (twittering-timeline-spec-to-string): modify
	the string format of `search' spec.
	(twittering-extract-timeline-spec): likewise.
