@@ -693,6 +693,11 @@ Return cons of the spec and the rest string."
     `((home) . ,(substring str (match-end 0))))
    ((string-match "^@" str)
     `((replies) . ,(substring str (match-end 0))))
+   ((string-match "^#\\([a-zA-Z0-9_-]+\\)" str)
+    (let* ((tag (match-string 1 str))
+	   (query (concat "#" tag))
+	   (rest (substring str (match-end 0))))
+      `((search ,query) . ,rest)))
    ((string-match "^:\\([a-z_-]+\\)" str)
     (let ((type (match-string 1 str))
 	  (following (substring str (match-end 0)))
